--- a/01. Классификация базовых подходов к обработке информации. Типовые задачи обработки информации и их описание.md
+++ b/01. Классификация базовых подходов к обработке информации. Типовые задачи обработки информации и их описание.md
@@ -1,90 +1,96 @@
 
-**Классификация базовых подходов к обработке информации.**
+# Базовые подходы к обработке информации
 
-Выделяют два базовых подхода: статистический и детерминистский. Эти подходы определяют выбор математического аппарата, методов и технологий для решения задач.
+## Статистический подход
 
-**_Статистический подход_** основан на использовании для анализируемых объектов и процессов вероятностных моделей данных: плотностей и функций распределения вероятностей, моментов распределений, достаточных статистик.
-• Алгоритм анализа данных в данном случае реализует статистическое решающее правило.
-• Качество или эффективность обработки определяется с использованием
-статистических характеристик (вероятностей ошибок при принятии
-решений, дисперсий или матриц ковариации ошибок и т.п.)
+основан на использовании: плотностей и функций распределения вероятностей, моментов распределений, достаточных статистик.
 
-**_Детерминистский подход_**: отказ от использования вероятностных моделей данных.
-Включает несколько подходов:
-• **Метрический подход** базируется на использовании при построении алгоритмов АД различных метрик (функций расстояния), определяющих степень «близости» и «различия» анализируемых данных в многомерных пространствах, а также – на выдвижении определенных гипотез относительно свойств анализируемых объектов, представленных точками в многомерных пространствах (гипотеза компактности и однородности классов образов).
-• **Нейросетевой подход** предполагает представление алгоритма АД в виде универсального преобразователя информации «вход» – «выход» на основе ансамбля искусственных нейронов. Требует обучения универсальной вычислительной среды; подходит для сложных задач, где модель объекта не задана априорно.
-• **Структурно-лингвистический подход** использует непроизводные элементы (подобразы) как признаки и анализирует их отношения через «грамматику» образов (иерархическая структура подобразов как лингвистических элементов). Позволяет применять теорию формальных языков.
+- Алгоритм реализует статистическое решающее правило.
+- Качество обработки определяется с использованием статистических характеристик (вероятностей ошибок, дисперсий или матриц ковариации ошибок)
 
-**Типовые задачи обработки информации и их описание.**
-Задачи АД делят на описательные (descriptive) и предсказательные (predictive).
+## Детерминистский подход
 
-• Описательные задачи (кластеризация, ассоциация) основное внимание уделяют пониманию обрабатываемых данных.
+отказ от использования вероятностных моделей данных.
 
-• Предсказательные задачи (классификация, регрессия и оценивание) направлены на предсказание состояний объектов.
+Виды:
 
-• Задачи АД также делят на задачи, реализующие обучение с учителем (supervised learning), и задачи, реализующие обучение без учителя или самообучение (unsupervised learning).
+| назание                    | описание                                                                                                                                                                         |
+| -------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Метрический                | Использование метрик (функций расстояния);<br>Использование гипотез о свойствах объектов (гипотеза компактности и однородности классов образов).                                 |
+| Нейросетевой               | Представление алгоритма в виде преобразователя "вход-выход" на основе ансамбля нейронов;<br>Требует обучения, подходит для сложных задач, где модель объекта не задана априорно. |
+| Структурно-лингвистический | Использует подобразы как признаки и анализирует их отношения через "грамматику" образов;<br>Позволяет применять теорию формальных языков.                                        |
 
-**Задача распознавания** (классификации, различения, узнавания): отнесение объекта, описываемого образом (признаками), к одному из классов.
-• Количество классов и их эталонные описания известны или могут быть определены
-в процессе обучения.
-• Во многих случаях эталонное описание классов может быть получено
-без обучения на основе постулирования математической модели
-образов. Например, гауссовские шумы в радиосигналах
-• В других случаях предполагается обучение на множестве прецедентов
-обучающей выборки объектов распознавания
-• Замечание:  распознавание с обучением на основе имеющегося множества прецедентов называют классификацией с обучением (с учителем).
+# Типовые задачи
 
-**Задача кластеризации**: Разбиение множества объектов (образов) на кластеры по степени сходства (близкие образы в одном кластере, отличающиеся — в разных).
-• Разделяют случаи, когда число классов известно, и случай, когда числа классов неизвестно(автоматическая классификация, или классификацией без обучения)
-• Задача классификации при не заданном количестве классов является
-наиболее сложной для решения; высокое качество разбиения образов
-на классы достигается только при достаточно большей степени
-различия образов, объективно относящихся к разным классам.
+Задачи делятся на
+- описательные (descriptive) - понимание обрабатываемых данных
+	- [[01. Классификация базовых подходов к обработке информации. Типовые задачи обработки информации и их описание#Задача кластеризации|кластеризация]]
+	- [[01. Классификация базовых подходов к обработке информации. Типовые задачи обработки информации и их описание#Задача ассоциаций|ассоциация]]
+- предсказательные (predictive) - предсказания состояний объектов
+	- [[01. Классификация базовых подходов к обработке информации. Типовые задачи обработки информации и их описание#Задача классификации (распознавания)|классификация]]
+	- [[01. Классификация базовых подходов к обработке информации. Типовые задачи обработки информации и их описание#Задача регрессии|регрессия]]
+	- [[01. Классификация базовых подходов к обработке информации. Типовые задачи обработки информации и их описание#Задача оценивания|оценивание]]
 
-**Задача оценивания**:  определение неизвестных характеристик
-объекта на основе обработки совокупности первичных данных,
-представленных либо непосредственно как наблюдения, либо в виде
-признаков (отобранных наблюдений).
-• В качестве оцениваемых характеристик могут выступать самые различные
-величины. К ним, например, может относиться один из параметров
-состояния объекта, либо вектор параметров, характеризующих полное состояние объекта $s\in{R^n}$
-• Включает параметрическое (известная форма распределения) и непараметрическое оценивание.
-• В классе задач оценивания выделяют задачу фильтрации, которая состоит в
-оценивании непосредственно ненаблюдаемой реализации векторного
-случайного процесса (случайной функции времени) или реализации
-случайного поля (случайной функции двух и более переменных),
-описывающих изменения состояния объекта во времени или пространстве.
 
-**Задача регрессии**: установление функциональной зависимости
-между ожидаемыми значениями зависимых (выходных) переменных и
-значениями независимых (входных) переменных.
-• Решение задачи базируется на использовании особым образом
-организованной обучающей выборки данных, в которой задается
-совокупность значений вектора независимых переменных $X^{N} = \{x^{(1)}, ...,x^{(N)}\}$
-и соответствующая ей совокупность значений зависимой переменной –
-«ответов» обучающей выборки $Y^{N} = \{y^{(1)}, ...,y^{(N)}\}$, где каждый элемент
-определен на множестве вещественных чисел.
+Задачи делятся на
+- реализующие обучение с учителем (supervised learning);
+- реализующие обучение без учителя (unsupervised learning).
 
-• В более широкой постановке может рассматриваться несколько
-зависимых переменных, которые объединяются в вектор.
-• Полученная функциональная зависимость используется для
-предсказания ожидаемого значения зависимой переменной для нового
-набора независимых (входных переменных).
-• Замечание: если значение зависимой переменной определяется по
-отношению к будущему моменту времени, которое присутствует в
-перечне компонентов вектора независимых переменных, то задача
-регрессии называется **задачей прогнозирования.**
+# Задача классификации (распознавания)
 
-• **Задача ассоциаций**: нахождение значимых связей
-(ассоциаций) между объектами или событиями.
-• Ассоциации представляются в виде определенных правил, которые
-могут быть использованы для объяснения природы анализируемых
-процессов и предсказания появления новых событий.
-• Поиск ассоциативных правил является одним популярных
-приложений Data Minning, при реализации которого ищутся часто
-встречающиеся наборы объектов среди большого множества таких
-наборов.
-• Замечание: по сути, данная задача является частным случаем задачи
-классификации. 
+Отнесение объекта, описываемого образом (признаками), к одному из классов.
+Количество классов и их эталонные описания известны или могут быть определены в процессе обучения.
+
+1. Во многих случаях эталонное описание классов может быть получено без обучения на основе постулирования математической модели образов. Например, гауссовские шумы в радиосигналах.
+2. В других случаях предполагается обучение на множестве прецедентов обучающей выборки объектов распознавания.
+
+> [!note] распознавание с обучением на основе имеющегося множества прецедентов называют классификацией с обучением (с учителем).
+
+# Задача кластеризации
+
+Разбиение множества объектов (образов) на кластеры по степени сходства (близкие образы в одном кластере, отличающиеся — в разных).
+
+1. число классов может быть известно;
+2. число классов может быть неизвестно (автоматическая классификация, классификация без обучения).
+
+Задача кластеризации при *не заданном количестве классов* является наиболее сложной для решения: высокое качество разбиения достигается только при большой степени различия образов разных классов.
+
+# Задача оценивания
+
+Определение неизвестных характеристик объекта на основе обработки совокупности первичных данных, представленных либо непосредственно как наблюдения, либо в виде признаков (отобранных наблюдений).
+
+В качестве оцениваемых характеристик могут выступать самые различные величины, например:
+- один из параметров состояния объекта
+- вектор параметров, характеризующих полное состояние объекта $s\in{R^n}$
+
+Виды:
+- параметрическое оценивание (известная форма распределения);
+- непараметрическое оценивание.
+
+Выделяют **задачу фильтрации**: 
+	оценивание непосредственно ненаблюдаемой реализации векторного случайного процесса (случайной функции времени) или реализации случайного поля (случайной функции двух и более переменных), описывающих изменения состояния объекта во времени или пространстве.
+
+# Задача регрессии
+
+Установление функциональной зависимости между ожидаемыми значениями зависимых (выходных) переменных и значениями независимых (входных) переменных.
+
+Решение базируется на использовании обучающей выборки данных, в которой задается 
+1. совокупность значений вектора независимых переменных $X^{N} = \{x^{(1)}, ...,x^{(N)}\}$; 
+2. совокупность значений зависимой переменной – «ответов» $Y^{N} = \{y^{(1)}, ...,y^{(N)}\}$, где каждый элемент определен на множестве вещественных чисел.
+
+Может рассматриваться несколько зависимых переменных, которые объединяются в вектор.
+Полученная функциональная зависимость используется для предсказания ожидаемого значения зависимой переменной для нового набора входных данных.
+
+> [!note] Если значение зависимой переменной определяется по отношению к будущему моменту времени, которое присутствует в векторе независимых переменных, то задача регрессии называется **задачей прогнозирования.**
+
+# Задача ассоциаций
+
+Нахождение значимых связей (ассоциаций) между объектами или событиями.
+
+**Ассоциации** - определенные правила, которые могут быть использованы для объяснения природы анализируемых процессов и предсказания появления новых событий.
+
+Поиск ассоциативных правил является одним из популярных приложений Data Minning, при реализации которого ищутся часто встречающиеся наборы объектов среди большого множества таких наборов.
+
+> [!note] По сути, данная задача является частным случаем задачи классификации. 
 
 
