--- a/03. Байесовская теория решений. Решающие правила на основе максимума апостериорной вероятности и функции правдоподобия.md
+++ b/03. Байесовская теория решений. Решающие правила на основе максимума апостериорной вероятности и функции правдоподобия.md
@@ -1,5 +1,5 @@
 
-## Статистический подход
+# Статистический подход
 
 - Образы объектов в пространстве используемых признаков представляются как реализации случайного вектора $x = (x_1, \dots, x_n)^T$.
 - Каждое значение этого вектора  $x = (x_1, \dots, x_n)^T \in \mathbb{R}^n$ — образ конкретного объекта.
@@ -15,7 +15,7 @@ $$p(\omega_i / x) = \frac{p(x / \omega_i) p(\omega_i)}{p(x)}, \quad i = \overlin
 ## Задача: 
 для каждого $x$ принять решение $\alpha(x) \in A = \{\alpha_i, i = \overline{1,M}\}$, разбивая пространство на области решений $\Gamma_i$, где $\alpha_i = \alpha(x) : x \in \Gamma_i \rightarrow \omega_i$.
 
-### Критерий максимума апостериорной вероятности (МАВ)
+# Критерий максимума апостериорной вероятности (МАВ)
 
 Важный частный случай МУР — использование симметричных штрафных функций с нулевой платой за правильное решение:
 
@@ -54,7 +54,8 @@ $$l(x) = \frac{p(x / \omega_1)}{p(x / \omega_2)}
 
 Особенность МАВ: отказ от обоснования штрафных функций, порог зависит только от априорных вероятностей, требуется меньше информации по сравнению с МУР.
 
-### Критерий максимального правдоподобия (МП)
+# Критерий максимального правдоподобия (МП)
+
 Еще один частный случай: в дополнение к отсутствию обоснованных штрафных функций, априорные вероятности одинаковы $p(\omega_i) = 1/M$, $i = \overline{1, M}$ или неизвестны.
 Решающие правила (4) преобразуются:
 
