--- a/11. Непараметрическое обучение в задачах распознавания. Метод k-ближайших соседей.md
+++ b/11. Непараметрическое обучение в задачах распознавания. Метод k-ближайших соседей.md
@@ -1,25 +1,30 @@
 
-## Непараметрическое обучение
+# Непараметрическое обучение
 
 **Задача непараметрического оценивания** — задача, в которой неизвестны параметры распределений и сами виды плотностей вероятностей или функций.
 
 **Решение:** требуется найти приближённую функцию $p$~$(x)$, обладающую следующими свойствами:
 
 1. **Сходимость по вероятности (состоятельность):**  
-    $$ \lim_{N \to \infty} P(|p(x) - \tilde{p}(x)| < \varepsilon) = 1 $$  
-    Это означает, что с ростом объёма обучающей выборки вероятность отклонения оценки от истинного значения становится сколь угодно малой.
-    
+   
+   $$ \lim_{N \to \infty} P(|p(x) - \tilde{p}(x)| < \varepsilon) = 1 $$
+   
+   Это означает, что с ростом объёма обучающей выборки вероятность отклонения оценки от истинного значения становится сколь угодно малой.
 2. **Сходимость в среднеквадратичном (асимптотическая несмещённость):**  
-    $$ \lim_{N \to \infty} M[\tilde{p}(x)] = p(x) \lim_{N \to \infty} M[|p(x) - \tilde{p}(x)|^2] = 0 $$
-## Метод k-ближайших соседей
+   
+   $$ \lim_{N \to \infty} M[\tilde{p}(x)] = p(x)\lim_{N \to \infty} M[|p(x) - \tilde{p}(x)|^2] = 0 $$
+   
+   
+# Метод k-ближайших соседей
 
 **Идея метода:** сделать объём ячеек переменным, т.е. зависящим от данных, а не фиксированным, так чтобы в ячейку попадало ровно $k$ элементов обучающей выборки.
 
-### Оценка плотности распределения
+## Оценка плотности распределения
 
 Оценка плотности распределения в точке $x$ имеет вид:
 
 $$ \tilde{p}(x) = \frac{k}{N \cdot V_n(k, N, X^N)} $$
+
 где:
 
 - $k$ — число ближайших соседей;
@@ -29,7 +34,7 @@ $$ \tilde{p}(x) = \frac{k}{N \cdot V_n(k, N, X^N)} $$
 
 При определении близости может использоваться любая метрика.
 
-### Евклидова метрика
+## Евклидова метрика
 
 При использовании евклидовой метрики объём гипершара равен:
 
@@ -37,23 +42,26 @@ $$ V_n = \frac{\pi^{n/2}}{\Gamma(\frac{n}{2} + 1)} r^n $$
 
 где Γ(⋅) — гамма-функция.
 
-### Выбор параметра kk
+## Выбор параметра kk
 
 Рекомендуемые зависимости:
 
 $$ k = a N^\gamma, \quad 0 < \gamma < 1 или k = b \ln(N + 1) $$  
+
 где $a,b,\gamma$ — константы.
 
 Если выполняются условия:  
-$$ \lim_{N \to \infty} k = \infty, \quad \lim_{N \to \infty} \frac{k}{N} = 0 $$  
+
+$$ \lim_{N \to \infty} k = \infty, \quad \lim_{N \to \infty} \frac{k}{N} = 0 $$ 
+
 то оценка является асимптотически несмещённой и состоятельной.
 
-### Точность оценки
+## Точность оценки
 
 - Точность оценки невелика при небольших объёмах обучающей выборки N.
 - При увеличении числа используемых соседей точность оценки повышается и становится сравнимой с оценками на основе метода Парзена.
 
-## Подстановка в МАВ (Максимум Апостериорной Вероятности)
+## Решающее правило
 
 В гипершар объёма $V_n$​ попадает $k_i​$ образов класса $\omega_i$​. Тогда:
 
@@ -66,7 +74,8 @@ $$ \omega_j : k_j = \max_{i} k_i $$
 Для двух классов:
 
 $\omega_1,$ если $k_1>k_2$       $\omega2,$ если $k2>k1$.
-### Границы суммарной вероятности ошибки
+
+## Границы суммарной вероятности ошибки
 
 $$ E_s \le \tilde{E}_s \le 2 E_s $$
 
