--- a/17. Композиционные алгоритмы, описание и базовые подходы.md
+++ b/17. Композиционные алгоритмы, описание и базовые подходы.md
@@ -1,5 +1,7 @@
 
-**Композиционные алгоритмы** основаны на объединении ансамбля из нескольких *простых* классификаторов, каждый из которых дает свое решение, а из совокупности этих решений формируется общий результат.
+# Композиционные алгоритмы
+
+основаны на объединении ансамбля из нескольких *простых* классификаторов, каждый из которых дает свое решение, а из совокупности этих решений формируется общий результат.
 
 Пусть есть выборка $X$ - образы, $D$ - принадлежность к классу.
 
@@ -82,46 +84,3 @@ $$\tilde d (x) = i = \arg \max _{j=\overline{1,L}} \left \lbrace \sum^L_{k=1} I_
 2. сложная задача усечения снимается
 3. проблема переобучения не такая уж проблема, поскольку ансамбль ДР уже не является единственным детально настроенным алгоритмом
 4. простота настройки (параметры: количество деревьев и количество признаков для расщепления)
-
-#  Композиции на основе бустинга
-
-Особенности
-1. итеративность процесса обучения
-2. учет предыдущих результатов классификации образов из выборки при выполнении каждой итерации
-3. учет работы ранее используемых БА (допущенные ошибки)
-Цель: усилить слабые классификаторы.
-### AdaBoost (adaptive boosting)
-
-Пусть есть выборка $XD^N$ для двух классов $\omega_1, \omega_2, d^{(i)}\in \lbrace -1, +1 \rbrace$.
-При формировании композиции выполняется $L$ итераций.
-БА - "пни" или деревья небольшой глубины $g_k(x) =\begin{cases} +1 \rightarrow x \in \omega_1 \\ -1 \rightarrow x \in \omega_2 \end{cases}$.
-Итоговый алгоритм:
-
-$$G(x) = sign\left[\sum^L_{k=1} \alpha_k g_k(x) \right]$$
-
-Для каждого БА вводится взвешенное число допущенных ошибок:
-
-$$E(g_k, w) = \sum^N_{i=1} w_i I(g_k(x^{(i)}) \ne d^{(i)}), \sum^N_{i=1} w_i =1$$
-
-Вес пня $\alpha_k$ расчитывается как
-
-$$\alpha_k = \frac{1}{2}\ln\left(\frac{1-E_k}{E_k}\right)$$
-
-Общий функционал качества распознавания - **отступ** - который надо минимизировать:
-
-$$Q(g, \alpha) = \sum^N_{i=1} \left[M(x^{(i)})<0\right] = \sum^N_{i=1}\left[d^{(i)} \sum_{k=1}^L \alpha_k g_k(x^{(i)}) <0 \right] \rightarrow \min$$
-
-**Алгоритм:**
-
-1. Назначить начальные веса $w_i = \frac{1}{N}$ - (имеет смысл априорных вероятностей);
-2. Для каждого шага $k=1,2,..L$;
-	1) Обучить БА $g_k(x)$ на $XD^N$ который минимизирует взвешенную ошибку классификации $E_k = \min E(g,w)$;
-	2) Если $E_K = 0$, то $G(x) = g_k(x)$, переход к п.3;
-	3) Если $E_k > 1/2$, то переход к п.4;
-	4) Вычислить коэффициент $\alpha_k$ по формуле выше и зафиксировать его как вес БА;
-	5) Пересчитать веса обучающих примеров: $w'_i = w_i \exp (-\alpha_k d^{(i)}g_k(x^{(i)}))$;
-	6) Выполнить нормировку коэффициентов $\sum^N_{i=1} w'_k=1$;
-3. $G_k = sign\left[ \sum^L_{k=1} \alpha_k g_k(x)\right]$ - итоговая композиция;
-4. Окончание.
-
-При взвешивании усиливается роль тех наблюдений, на которых допущены ошибки -> так учитываются ошибки с предыдущих шагов.
