--- a/23. Основы и постановка задачи регрессионного анализа данных. Нелинейная регрессия.md
+++ b/23. Основы и постановка задачи регрессионного анализа данных. Нелинейная регрессия.md
@@ -1,10 +1,11 @@
-# Основы и постановка задачи
+![[22. Основы и постановка задачи регрессионного анализа данных.  Уравнения линейной регрессии#Общие сведения]]
 
-См. [[22. Основы и постановка задачи регрессионного анализа данных.  Уравнения линейной регрессии]].
+![[22. Основы и постановка задачи регрессионного анализа данных.  Уравнения линейной регрессии#Постановка задачи]]
 
 # Нелинейная регрессия
 
 Полученное для линейной регрессии решение (см. [[22. Основы и постановка задачи регрессионного анализа данных.  Уравнения линейной регрессии|вопрос 22]]) может использоваться при произвольном нелинейном преобразовании $x: \bar x = \psi(x)$, если неизвестные параметры входят в функционал линейным образом:
+
 $$\psi(x,a) = a^T \psi(x), \quad \tilde y = \tilde a^T \psi(x).$$
 
 Пусть отображение $\psi: \mathbb R^n \rightarrow \mathbb R^{s+1}$ осуществляет перевод входных переменных в новое пространство в общем случае другой размерности. Тогда $\psi(x) = \left(1, \psi_1(x), \ldots, \psi_s(x) \right)^T$. Вводя для всех элементов обучающей выборки замену $\bar x^{(i)} = \psi(x^{(i)}),\ i=\overline{1,N},\ \bar x \in \bar X \subseteq \mathbb R^s$, можно перейти к поиску решения задачи линейной регрессии для новых переменных
